bundle/tests/scorecard/kuttl/route-certificate/01-ol-with-cert.yaml
apiVersion: apps.openliberty.io/v1beta2
kind: OpenLibertyApplication
metadata:
  name: route-with-cert-lib-app
spec:
  # Add fields here
  applicationImage: icr.io/appcafe/open-liberty:full-java8-openj9-ubi
  replicas: 1
  expose: true
  route:
    host: myapp.mycompany.com
    certificateSecretRef: route-tls-secret
    termination: reencrypt
