bundle/tests/scorecard/kuttl/route-certificate/02-update-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: route-tls-secret
type: kubernetes.io/tls
data:
  # 'cacrtupdate'
  ca.crt: Y2FjZXJ0dXBkYXRl
