bundle/tests/scorecard/kuttl/route-certificate/03-delete-route.yaml
apiVersion: apps.openliberty.io/v1beta2
kind: OpenLibertyApplication
metadata:
  name: route-with-cert-lib-app
spec:
  # Add fields here
  expose: true
  route:
