bundle/tests/scorecard/kuttl/route-certificate/03-delete-secret.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: openliberty.io/v1beta1
  kind: OpenLibertyApplication
- apiVersion: v1
  kind: Secret
  name: route-tls-secret
