bundle/tests/scorecard/kuttl/route-certificate/01-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-with-cert-lib
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-with-cert-lib
spec:
  host: myapp.mycompany.com
  tls:
    caCertificate: |
      cacrt
    certificate: |
      tlscrt
    destinationCACertificate: |
      destCAcrt
    key: |
      tlskey
    termination: reencrypt
