bundle/tests/scorecard/kuttl/route-certificate/02-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-with-cert-lib
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
