bundle/tests/scorecard/kuttl/route-certificate/03-errors.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-with-cert-lib-app
spec:
  tls:
    caCertificate: |
      cacrtupdate
    certificate: |
      tlscrt
    destinationCACertificate: |
      destCAcrt
    key: |
      tlskey
    termination: reencrypt
